#896 Use List#getFirst for map schema children
Use the Java 21 List API when selecting the map key-value group, keeping schema traversal aligned with the project's modern Java baseline.